Updated flexbox abstraction. Fixed bug on cross-axis alignment when content overflows (and wraps) on main-axis.

--- a/core/layout/flex.css
+++ b/core/layout/flex.css
@@ -50,6 +50,10 @@
     -webkit-align-items: flex-start;
     -ms-flex-align: flex-start;
     align-items: flex-start;
+
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
 }
 /*Stack child items to the main-axis center*/
 .main-center {
@@ -62,6 +66,10 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
 }
 /*Stack child items to the main-axis end.*/
 .main-end {
@@ -74,12 +82,20 @@
     -webkit-align-items: end;
     -ms-flex-align: end;
     align-items: end;
+
+    -webkit-align-content: flex-end;
+    -ms-flex-line-pack: end;
+    align-content: flex-end;
 }
 /*Stretch child items along the cross-axis*/
 .cross-stretch {
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
+
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
 }
 
 /*Wrap items to next line on main-axis*/
